# api/go/model_auth_sendotp_body.go
@@ -1,0 +1,16 @@
+/*
+ * janja API
+ *
+ * Janja accounts API endpoints featuring core actions such as user authentication, user creation,
+ *
+ * API version: 1.0.0
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type AuthSendotpBody struct {
+
+	Email string `json:"email,omitempty"`
+
+	EmailSender string `json:"email_sender,omitempty"`
+}
