# api/go/model_inline_response_200_4.go
@@ -1,0 +1,20 @@
+/*
+ * janja API
+ *
+ * Janja accounts API endpoints featuring core actions such as user authentication, user creation,
+ *
+ * API version: 1.0.0
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type InlineResponse2004 struct {
+
+	Message string `json:"message,omitempty"`
+
+	Email string `json:"email,omitempty"`
+
+	Otp string `json:"otp,omitempty"`
+
+	Status string `json:"status,omitempty"`
+}
